force-app/main/default/objects/Approval__c/Approval__c.object-meta.xml
<CustomObject>
    <label>Approval</label>
    <nameField>
        <displayFormat>Appval-{00000}</displayFormat>
        <label>Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>