force-app/main/default/objects/Approval__c/fields/After_held_Approved_from__c.field-meta.xml
<CustomField>
    <fullName>After_held_Approved_from__c</fullName>
    <label>After held_Approved from</label>
    <required>true</required>
    <type>Date</type>
</CustomField>