force-app/main/default/objects/Approval__c/fields/After_held_Approved_until__c.field-meta.xml
<CustomField>
    <fullName>After_held_Approved_until__c</fullName>
    <label>After held_Approved until</label>
    <type>Date</type>
</CustomField>