force-app/main/default/objects/Approval__c/fields/After_held_Audit_result_approved__c.field-meta.xml
<CustomField>
    <fullName>After_held_Audit_result_approved__c</fullName>
    <label>After held_Audit result approved</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>