force-app/main/default/objects/Approval__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>TextArea</type>
</CustomField>