force-app/main/default/objects/Approval__c/fields/Approval_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Start_Date__c</fullName>
    <inlineHelpText>Date of starting plant brand approval.</inlineHelpText>
    <label>Approval Start Date</label>
    <type>Date</type>
</CustomField>