force-app/main/default/objects/Approval__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Characteristic__c.Characteristic_Key__c</field>
            <operation>equals</operation>
            <value>PLANTBRAND</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Characteristic__c</referenceTo>
    <relationshipLabel>Approval (Brand)</relationshipLabel>
    <relationshipName>Approval7</relationshipName>
    <type>Lookup</type>
</CustomField>