force-app/main/default/objects/Approval__c/fields/Business_case_approved__c.field-meta.xml
<CustomField>
    <fullName>Business_case_approved__c</fullName>
    <label>Business case approved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>