force-app/main/default/objects/Approval__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Case number of technical feasibility check</inlineHelpText>
    <label>Technical Feasibility Case #</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>Approval</relationshipLabel>
    <relationshipName>Approval</relationshipName>
    <type>Lookup</type>
</CustomField>