force-app/main/default/objects/Approval__c/fields/Case_number_of_plant_brand_approval__c.field-meta.xml
<CustomField>
    <fullName>Case_number_of_plant_brand_approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case number of plant brand approval</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>Approval (Case number of plant brand approval)</relationshipLabel>
    <relationshipName>Approval1</relationshipName>
    <type>Lookup</type>
</CustomField>