force-app/main/default/objects/Approval__c/fields/Close_this_audit_process__c.field-meta.xml
<CustomField>
    <fullName>Close_this_audit_process__c</fullName>
    <label>Close this audit process?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>