force-app/main/default/objects/Approval__c/fields/Closing_date_of_the_audit__c.field-meta.xml
<CustomField>
    <fullName>Closing_date_of_the_audit__c</fullName>
    <label>Closing date of the audit</label>
    <type>Date</type>
</CustomField>