force-app/main/default/objects/Approval__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Customer or Prospect Contact Name? Please link the Approval to the appropriate Customer or Prospect contact name.</inlineHelpText>
    <label>Customer or Prospect Contact Name?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Approval</relationshipLabel>
    <relationshipName>Approval</relationshipName>
    <type>Lookup</type>
</CustomField>