force-app/main/default/objects/Approval__c/fields/Customer_or_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Customer_or_Prospect__c</fullName>
    <label>Customer or Prospect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>