force-app/main/default/objects/Approval__c/fields/Customer_or_Prospect_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_or_Prospect_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer or Prospect Company Name? Please link the Approval to the appropriate Customer or Prospect company name.</inlineHelpText>
    <label>Customer or Prospect Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Approval (AccountCustomer or Prospect Company Name)</relationshipLabel>
    <relationshipName>Approval</relationshipName>
    <type>Lookup</type>
</CustomField>