force-app/main/default/objects/Approval__c/fields/Customer_spec_nummer_del_del__c.field-meta.xml
<CustomField>
    <fullName>Customer_spec_nummer_del_del__c</fullName>
    <label>Customer spec nummer</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>