force-app/main/default/objects/Approval__c/fields/Customer_specification_available__c.field-meta.xml
<CustomField>
    <fullName>Customer_specification_available__c</fullName>
    <label>Customer specification available</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>