force-app/main/default/objects/Approval__c/fields/Date_of_starting_technical_feasibility_c__c.field-meta.xml
<CustomField>
    <fullName>Date_of_starting_technical_feasibility_c__c</fullName>
    <inlineHelpText>Date of starting technical feasibility check</inlineHelpText>
    <label>Starting Technical Feasibility</label>
    <type>Date</type>
</CustomField>