force-app/main/default/objects/Approval__c/fields/Deep_Dive_customer_Requirements_finished__c.field-meta.xml
<CustomField>
    <fullName>Deep_Dive_customer_Requirements_finished__c</fullName>
    <label>Deep Dive customer Requirements finished</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>