force-app/main/default/objects/Approval__c/fields/Documents_to_prepare_send_prior_to_audit__c.field-meta.xml
<CustomField>
    <fullName>Documents_to_prepare_send_prior_to_audit__c</fullName>
    <label>Documents to prepare/send prior to audit</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>