force-app/main/default/objects/Approval__c/fields/Estimated_costs_in_euro_for_Hoogwegt__c.field-meta.xml
<CustomField>
    <fullName>Estimated_costs_in_euro_for_Hoogwegt__c</fullName>
    <label>(Estimated) costs (in euro) for Hoogwegt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>