force-app/main/default/objects/Approval__c/fields/Expected_Margin_EU_MT__c.field-meta.xml
<CustomField>
    <fullName>Expected_Margin_EU_MT__c</fullName>
    <label>Expected Margin (EU / MT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>