force-app/main/default/objects/Approval__c/fields/Expected_Volume_MT_year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Volume_MT_year__c</fullName>
    <label>Expected Volume (MT / year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>