force-app/main/default/objects/Approval__c/fields/Explanation_on_previous_question_e_g_p__c.field-meta.xml
<CustomField>
    <fullName>Explanation_on_previous_question_e_g_p__c</fullName>
    <inlineHelpText>Explanation on previous question (e.g. performance).  Explanation of Business Case Approval</inlineHelpText>
    <label>Business Case Approval Explanation</label>
    <type>TextArea</type>
</CustomField>