force-app/main/default/objects/Approval__c/fields/FIDM__c.field-meta.xml
<CustomField>
    <fullName>FIDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Fat% of product (only if OPCO=Cheese)</inlineHelpText>
    <label>FIDM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Characteristic__c.Characteristic_Key__c</field>
            <operation>equals</operation>
            <value>FIDM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Characteristic__c</referenceTo>
    <relationshipLabel>Approval (FIDM)</relationshipLabel>
    <relationshipName>Approval1</relationshipName>
    <type>Lookup</type>
</CustomField>