force-app/main/default/objects/Approval__c/fields/First_Business_case__c.field-meta.xml
<CustomField>
    <fullName>First_Business_case__c</fullName>
    <label>First Business case?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>