force-app/main/default/objects/Approval__c/fields/Halal__c.field-meta.xml
<CustomField>
    <fullName>Halal__c</fullName>
    <label>Halal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jakim recognized</fullName>
            </value>
            <value>
                <fullName>MUI recognized</fullName>
            </value>
            <value>
                <fullName>MUIS recognized</fullName>
            </value>
            <value>
                <fullName>No requirement on organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>