force-app/main/default/objects/Approval__c/fields/Kosher__c.field-meta.xml
<CustomField>
    <fullName>Kosher__c</fullName>
    <label>Kosher</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OU</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Manchaster Beth</fullName>
            </value>
            <value>
                <fullName>London Beth</fullName>
            </value>
            <value>
                <fullName>No requirement on organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>