force-app/main/default/objects/Approval__c/fields/Mail_address_of_the_auditor__c.field-meta.xml
<CustomField>
    <fullName>Mail_address_of_the_auditor__c</fullName>
    <label>Mail address of the auditor</label>
    <type>Email</type>
</CustomField>