force-app/main/default/objects/Approval__c/fields/Name_of_the_auditor__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_auditor__c</fullName>
    <label>Name of the auditor</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>