force-app/main/default/objects/Approval__c/fields/NC_s_complaints_last_2_years_from_this__c.field-meta.xml
<CustomField>
    <fullName>NC_s_complaints_last_2_years_from_this__c</fullName>
    <label>NC&apos;s / complaints last 2 years from this</label>
    <length>255</length>
    <type>Text</type>
</CustomField>