force-app/main/default/objects/Approval__c/fields/On_behalf_of_Hoogwegt__c.field-meta.xml
<CustomField>
    <fullName>On_behalf_of_Hoogwegt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On behalf of Hoogwegt</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval2</relationshipName>
    <type>Lookup</type>
</CustomField>