force-app/main/default/objects/Approval__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Characteristic__c.Characteristic_Key__c</field>
            <operation>equals</operation>
            <value>ORIGIN</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Characteristic__c</referenceTo>
    <relationshipLabel>Approval (Origin)</relationshipLabel>
    <relationshipName>Approval4</relationshipName>
    <type>Lookup</type>
</CustomField>