force-app/main/default/objects/Approval__c/fields/Physical_audit_or_on_remote__c.field-meta.xml
<CustomField>
    <fullName>Physical_audit_or_on_remote__c</fullName>
    <label>Physical audit or on remote?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>On remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>