force-app/main/default/objects/Approval__c/fields/Pre_audit_by_Hoogwegt_required__c.field-meta.xml
<CustomField>
    <fullName>Pre_audit_by_Hoogwegt_required__c</fullName>
    <label>Pre-audit by Hoogwegt required?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>