force-app/main/default/objects/Approval__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMF</fullName>
            </value>
            <value>
                <fullName>BMP</fullName>
            </value>
            <value>
                <fullName>BUTTER</fullName>
            </value>
            <value>
                <fullName>FFP</fullName>
            </value>
            <value>
                <fullName>SMP</fullName>
            </value>
            <value>
                <fullName>WHEY</fullName>
            </value>
            <value>
                <fullName>WMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>