force-app/main/default/objects/Approval__c/fields/Product_customer_spec__c.field-meta.xml
<CustomField>
    <fullName>Product_customer_spec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product customer spec</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Characteristic__c.Characteristic_Key__c</field>
            <operation>equals</operation>
            <value>CP_SPEC</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Characteristic__c</referenceTo>
    <relationshipLabel>Approval (Product customer spec)</relationshipLabel>
    <relationshipName>Approval6</relationshipName>
    <type>Lookup</type>
</CustomField>