force-app/main/default/objects/Approval__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AT EU15</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>BE EU15</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>BY</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>CZ EU</fullName>
            </value>
            <value>
                <fullName>DE EU15</fullName>
            </value>
            <value>
                <fullName>DK EU15</fullName>
            </value>
            <value>
                <fullName>EC FEED ORIGIN, GMP + FSA ASSU</fullName>
            </value>
            <value>
                <fullName>EE  EU</fullName>
            </value>
            <value>
                <fullName>ES EU15</fullName>
            </value>
            <value>
                <fullName>FI EU15</fullName>
            </value>
            <value>
                <fullName>FR EU15</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>HU  EU</fullName>
            </value>
            <value>
                <fullName>IE EU15</fullName>
            </value>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>IT EU15</fullName>
            </value>
            <value>
                <fullName>LT  EU</fullName>
            </value>
            <value>
                <fullName>LU EU15</fullName>
            </value>
            <value>
                <fullName>LV  EU</fullName>
            </value>
            <value>
                <fullName>MY</fullName>
            </value>
            <value>
                <fullName>NL EU15</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>