force-app/main/default/objects/Approval__c/fields/ProductLookup__c.field-meta.xml
<CustomField>
    <fullName>ProductLookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the product associated with this Approval</inlineHelpText>
    <label>Product</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Approval</relationshipLabel>
    <relationshipName>Approval</relationshipName>
    <type>Lookup</type>
</CustomField>