force-app/main/default/objects/Approval__c/fields/Reason_for_audit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_audit__c</fullName>
    <label>Reason for audit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial audit</fullName>
            </value>
            <value>
                <fullName>Re-approval audit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Namely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>