force-app/main/default/objects/Approval__c/fields/Related_Opco__c.field-meta.xml
<CustomField>
    <fullName>Related_Opco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>OPCO where trader is related to.</inlineHelpText>
    <label>Related Opco</label>
    <referenceTo>Opco__c</referenceTo>
    <relationshipLabel>Approval</relationshipLabel>
    <relationshipName>Approval</relationshipName>
    <type>Lookup</type>
</CustomField>