force-app/main/default/objects/Approval__c/fields/Ship_to_Location__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ship to Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Approval</relationshipLabel>
    <relationshipName>Approval</relationshipName>
    <type>Lookup</type>
</CustomField>