force-app/main/default/objects/Approval__c/fields/Ship_To_Party__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Party__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ship To Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Approval</relationshipLabel>
    <relationshipName>Approval1</relationshipName>
    <type>Lookup</type>
</CustomField>