force-app/main/default/objects/Approval__c/fields/Starting_date_of_the_audit__c.field-meta.xml
<CustomField>
    <fullName>Starting_date_of_the_audit__c</fullName>
    <label>Starting date of the audit</label>
    <required>true</required>
    <type>Date</type>
</CustomField>