force-app/main/default/objects/Approval__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Case</fullName>
            </value>
            <value>
                <fullName>Technical Feasibility</fullName>
            </value>
            <value>
                <fullName>Final Combinations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>