force-app/main/default/objects/Approval__c/fields/Strategic_because__c.field-meta.xml
<CustomField>
    <fullName>Strategic_because__c</fullName>
    <label>Strategic, because</label>
    <type>TextArea</type>
</CustomField>