force-app/main/default/objects/Approval__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Product Sub-Type associated with this Approval</inlineHelpText>
    <label>Product-Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Characteristic__c.Characteristic_Key__c</field>
            <operation>equals</operation>
            <value>Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Characteristic__c</referenceTo>
    <relationshipLabel>Approval</relationshipLabel>
    <relationshipName>Approval</relationshipName>
    <type>Lookup</type>
</CustomField>