force-app/main/default/objects/Approval__c/fields/Supplied_or_intended_product_s__c.field-meta.xml
<CustomField>
    <fullName>Supplied_or_intended_product_s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplied (or intended) product(s)</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Approval (Supplied (or intended) product(s))</relationshipLabel>
    <relationshipName>Approval1</relationshipName>
    <type>Lookup</type>
</CustomField>