force-app/main/default/objects/Approval__c/fields/Supplier_spec_number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_spec_number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier spec number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Characteristic__c.Characteristic_Key__c</field>
            <operation>equals</operation>
            <value>SPEC_NO</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Characteristic__c</referenceTo>
    <relationshipLabel>Approval (Supplier spec number)</relationshipLabel>
    <relationshipName>Approval5</relationshipName>
    <type>Lookup</type>
</CustomField>