force-app/main/default/objects/Approval__c/fields/Supplier_spec_nummer__c.field-meta.xml
<CustomField>
    <fullName>Supplier_spec_nummer__c</fullName>
    <label>Supplier spec nummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>