force-app/main/default/objects/Approval__c/fields/Trader__c.field-meta.xml
<CustomField>
    <fullName>Trader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trader</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approval</relationshipLabel>
    <relationshipName>Approval</relationshipName>
    <type>Lookup</type>
</CustomField>