force-app/main/default/objects/Approval__c/fields/TSS_Colleague__c.field-meta.xml
<CustomField>
    <fullName>TSS_Colleague__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>TSS colleague to pick up this request.  Please select the colleague to process this request</inlineHelpText>
    <label>TSS Colleague</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval1</relationshipName>
    <type>Lookup</type>
</CustomField>