force-app/main/default/objects/Approval__c/fields/Unique_key_Requirements_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Unique_key_Requirements_Explanation__c</fullName>
    <inlineHelpText>Unique key requirements &amp; explanation (e.g. certificates, shelf life, pack)</inlineHelpText>
    <label>Unique Key Requirements &amp; Explanation</label>
    <type>TextArea</type>
</CustomField>