force-app/main/default/objects/Approval__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <defaultValue>DATE( YEAR(TODAY()) ,MONTH(TODAY()),DAY(TODAY()))</defaultValue>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>