force-app/main/default/objects/Approval__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <defaultValue>DATE( YEAR(TODAY())+2 ,MONTH(TODAY()),DAY(TODAY()))</defaultValue>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>