force-app/main/default/objects/Approval__c/fields/VLOG__c.field-meta.xml
<CustomField>
    <fullName>VLOG__c</fullName>
    <label>VLOG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>