force-app/main/default/objects/Approval__c/recordTypes/Business_Case.recordType-meta.xml
<RecordType>
    <fullName>Business_Case</fullName>
    <active>true</active>
    <label>New Business Case</label>
</RecordType>