force-app/main/default/objects/Approval__c/recordTypes/Final_Approval.recordType-meta.xml
<RecordType>
    <fullName>Final_Approval</fullName>
    <active>true</active>
    <label>Register Existing Combination Only</label>
</RecordType>