force-app/main/default/objects/Approval__c/validationRules/OriginOrProductMustBeFilled.validationRule-meta.xml
<ValidationRule>
    <fullName>OriginOrProductMustBeFilled</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNULL(Origin__c ) ,  ISNULL(Product_Factcode__c ))</errorConditionFormula>
    <errorMessage>Both Origin And Product Fact Code can&apos;t be Empty.</errorMessage>
</ValidationRule>