force-app/main/default/objects/Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Customer__c</columns>
    <columns>Customer_spec_nummer_del_del__c</columns>
    <columns>ProductLookup__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>